# backend/src/main/java/com/teacup/teacuppicturebackend/model/entity/PictureUploadPart.java
@@ -1,0 +1,21 @@
+package com.teacup.teacuppicturebackend.model.entity;
+
+import com.baomidou.mybatisplus.annotation.IdType;
+import com.baomidou.mybatisplus.annotation.TableId;
+import com.baomidou.mybatisplus.annotation.TableName;
+import lombok.Data;
+
+import java.time.LocalDateTime;
+
+@Data
+@TableName("picture_upload_part")
+public class PictureUploadPart {
+    @TableId(value = "id", type = IdType.AUTO)
+    private Long id;
+    private Long sessionId;
+    private Integer partNumber;
+    private String etag;
+    private Long size;
+    private String checksum;
+    private LocalDateTime createTime;
+}
